Version: 0.2.3
Date: ????
  Features:
    - Natural resources like trees and rocks are now accounted for in the chain. This also partially overwrote the mining resources, so now they might not appear if they don't have an autoplace.
  Bugfixes:
    - Should no longer crash when it attempts to unhighlight the tier table after it got rebuilt.
---------------------------------------------------------------------------------------------------
Version: 0.2.2
Date: 2024-05-26
  Features:
    - Mining resources are now accounted for in the chain. This means uranium ore is no longer T0
    - Offshore pumps are now accounted for in the chain
  Changes:
    - Refactored almost the entire tier calculation. Should now have less of a chance of dependency bugs and be mostly easier to read.
  Bugfixes:
    - Now unhighlights when you click anywhere on the Tier Menu
    - Rocket products now consider building the rocket instead of just the silo
    - Clicking on fluids now also highlight their dependents
    - Should no longer crash when changing the ignored recipes after loading a game
    - Should actually update base items when the settings change
---------------------------------------------------------------------------------------------------
Version: 0.2.1
Date: 2024-05-24
  Features:
    - Clicking on an item now highlights its dependents
    - Settings are now global and the list will be updated to match the settings
    - Add a setting to toggle on whether or not to consider technology when calculating
  Optimizations:
    - Now marks incalculable items and unmarks them once the blocking item is calculated
  Changes:
    - Left-most items are no longer reliably simpler than right-most items
  Bugfixes:
    - Fixed overriden base items not appearing in the tierlist
    - Fixed ignored recipes not being ignored
    - Fixed the technology decrement applying even when the tier was determined by the prerequesite instead of items