@@ -5,6 +5,7 @@ Date: ????
     - Natural resources like trees and rocks are now accounted for in the chain. This also partially overwrote the mining resources, so now they might not appear if they don't have an autoplace.
   Bugfixes:
     - Should no longer crash when it attempts to unhighlight the tier table after it got rebuilt.
+    - Removed possible crash with tier_array being nil
 ---------------------------------------------------------------------------------------------------
 Version: 0.2.2
 Date: 2024-05-26
